ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/19_invalid_logical_operands.lava
boolean ok = 1 && true;
